kubernetes/apps/games/minecraft/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: playit
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
    - fromEntities:
        - world # TODO: figure out why some traffic from the local network shows its source as the internal cidr
      toPorts:
        - ports:
            - port: "25565"
              protocol: TCP
  egress:
    - toFQDNs:
        - matchPattern: '*.fabricmc.net'
        - matchPattern: '*.modrinth.com'
        - matchPattern: '*.mojang.com'
        - matchPattern: '*.minecraftservices.com'
        - matchName: vanillatweaks.net
        - matchName: playerdb.co
        - matchName: github.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
